tests/invalid/range_errors.am
.entry START
START: mov #1000, r1
add #-1000, r2
sub r3, r4
prn #32767
stop
DATA1: .data 1000, -1000, 32767
DATA2: .data 512, -513
MATRIX: .mat [2][2] 600, -600, 1000, -1000
